--- a/WarehouseEcommerce/Content/Theme/University/app/css/app.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/app.css
@@ -2128,7 +2128,7 @@ input[type="number"]::-webkit-outer-spin-button {
     .prd_lst_boxouter .imagewrap {
         display: inline-block;
         margin-bottom: 23px;
-        box-shadow: 0px 0px 23px 2px #d8d8d8;
+        box-shadow: 0px 0px 23px 2px #f3eeee;
     }
 
     .prd_lst_boxouter .prdName {
@@ -8453,7 +8453,6 @@ body {
     }
 
 .nb_featuredPrdCarrousle .item .imagewrap {
-    box-shadow: 0px 0px 23px 2px #d8d8d8;
     display: inline-block;
     margin-top: 20px;
     margin-bottom: 30px;
