--- a/WarehouseEcommerce/Views/Theme/University/Products/_ProductByAttributeSelector.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Products/_ProductByAttributeSelector.cshtml
@@ -83,7 +83,7 @@
     {
         if (!Ganedata.Core.Services.Inventory.IsProductInNotifyList(Model.SelectedProduct, ViewBag.CurrentUserId))
         {
-            <button class="btmbtn sho" onclick="addToNotifyList(@Model.SelectedProduct.ProductId, @Model.BaseProductId)" id="notification-bell_@Model.SelectedProduct.ProductId"><i class="bel-icon fa fa-bell-o list-icon" style="font-size: 28px;"></i></button>
+            <button class="btmbtn sho" onclick="addToNotifyList(@Model.SelectedProduct.ProductId, @Model.BaseProductId); hidePopup();" id="notification-bell_@Model.SelectedProduct.ProductId"><i class="bel-icon fa fa-bell-o list-icon" style="font-size: 28px;"></i></button>
         }
         else
         {
@@ -93,10 +93,16 @@
 
     @if (!Ganedata.Core.Services.Inventory.IsProductInWishList(Model.SelectedProduct, ViewBag.CurrentUserId))
     {
-        <button class="btmbtn sho" id="wish_@Model.SelectedProduct.ProductId" onclick="addToWishList(@Model.SelectedProduct.ProductId, @Model.BaseProductId)"><i class="icon-love list-icon" style="font-size: 28px;"></i></button>
+        <button class="btmbtn sho" id="wish_@Model.SelectedProduct.ProductId" onclick="addToWishList(@Model.SelectedProduct.ProductId, @Model.BaseProductId); hidePopup();"><i class="icon-love list-icon" style="font-size: 28px;"></i></button>
     }
     else
     {
         <button class="btmbtn sho" id="wish_@Model.SelectedProduct.ProductId" onclick="redirectToWishListByConfirmation()"><i class="icon-love list-icon" style="color: red;font-size: 28px;"></i></button>
     }
 </div>
+
+<script>
+    function hidePopup() {
+        $("#product-by-attribute-selector").modal("hide");
+    }
+</script>
